[Resource-Timing] `name` is wrong for http to https redirection

According to the spec, the `name` attribute MUST provide the
pre-redirection URL. In the case of http=>https redirections,
that's not the case and the post-redirection URL is provided.
This CL fixes that.

BUG=922365

Change-Id: Ic9acf354ef66d654ab41259aa0af297a56e775ce
Reviewed-on: https://chromium-review.googlesource.com/c/1411929
Commit-Queue: Yoav Weiss <yoavweiss@chromium.org>
Reviewed-by: Nicolás Peña Moreno <npm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623293}
Former-commit-id: 5ba90c2f9ee6e23c0ff0b22bc4ef0ae9477c57ad